@@ -118,6 +118,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_tape',
 		    'storage' => 'my_tape',
 		    'config' => 'TESTCONF2',
+		    'retention_type' => 'other config',
 		    'comment' => undef, },
 		  { 'position' => 2,
 		    'datestamp' => 20140527000200,
@@ -129,6 +130,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_tape',
 		    'storage' => 'my_tape',
 		    'config' => 'TESTCONF2',
+		    'retention_type' => 'other config',
 		    'comment' => undef, },
 		  { 'position' => 3,
 		    'datestamp' => 20140527000103,
@@ -140,6 +142,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => undef, },
 		  { 'position' => 4,
 		    'datestamp' => 20140527000102,
@@ -151,6 +154,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => undef, },
 		  { 'position' => 5,
 		    'datestamp' => 20140527000101,
@@ -162,6 +166,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => undef, },
 		  { 'position' => 6,
 		    'datestamp' => 20140527000100,
@@ -173,6 +178,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => undef, },
 		  { 'position' => 7,
 		    'datestamp' => 20140527000005,
@@ -184,6 +190,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment005', },
 		  { 'position' => 8,
 		    'datestamp' => 20140527000004,
@@ -195,6 +202,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment004', },
 		  { 'position' => 9,
 		    'datestamp' => 20140527000003,
@@ -206,6 +214,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment003', },
 		  { 'position' => 10,
 		    'datestamp' => 20140527000002,
@@ -217,6 +226,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment002', },
 		  { 'position' => 11,
 		    'datestamp' => 20140527000001,
@@ -228,6 +238,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment001', },
 		  { 'position' => 12,
 		    'datestamp' => 20140527000000,
@@ -239,6 +250,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment000', },
 		],
 		'severity' => $Amanda::Message::SUCCESS,
@@ -270,6 +282,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_tape',
 		    'storage' => 'my_tape',
 		    'config' => 'TESTCONF2',
+		    'retention_type' => 'other config',
 		    'comment' => undef, },
 		  { 'position' => 2,
 		    'datestamp' => 20140527000200,
@@ -281,6 +294,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_tape',
 		    'storage' => 'my_tape',
 		    'config' => 'TESTCONF2',
+		    'retention_type' => 'other config',
 		    'comment' => undef, },
 		],
 		'severity' => $Amanda::Message::SUCCESS,
@@ -312,6 +326,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => undef, },
 		  { 'position' => 4,
 		    'datestamp' => 20140527000102,
@@ -323,6 +338,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => undef, },
 		  { 'position' => 5,
 		    'datestamp' => 20140527000101,
@@ -334,6 +350,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => undef, },
 		  { 'position' => 6,
 		    'datestamp' => 20140527000100,
@@ -345,6 +362,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => undef, },
 		],
 		'severity' => $Amanda::Message::SUCCESS,
@@ -376,6 +394,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment004', },
 		  { 'position' => 9,
 		    'datestamp' => 20140527000003,
@@ -387,6 +406,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment003', },
 		  { 'position' => 11,
 		    'datestamp' => 20140527000001,
@@ -398,6 +418,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment001', },
 		  { 'position' => 12,
 		    'datestamp' => 20140527000000,
@@ -408,6 +429,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'blocksize' => '32',
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
+		    'retention_type' => 'NO',
 		    'config' => 'TESTCONF',
 		    'comment' => 'comment000', },
 		],
@@ -440,6 +462,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment005', },
 		  { 'position' => 8,
 		    'datestamp' => 20140527000004,
@@ -450,6 +473,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'blocksize' => '32',
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
+		    'retention_type' => 'no-reuse',
 		    'config' => 'TESTCONF',
 		    'comment' => 'comment004', },
 		  { 'position' => 9,
@@ -462,6 +486,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment003', },
 		  { 'position' => 10,
 		    'datestamp' => 20140527000002,
@@ -473,6 +498,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment002', },
 		  { 'position' => 11,
 		    'datestamp' => 20140527000001,
@@ -484,6 +510,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment001', },
 		  { 'position' => 12,
 		    'datestamp' => 20140527000000,
@@ -494,6 +521,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'blocksize' => '32',
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
+		    'retention_type' => 'NO',
 		    'config' => 'TESTCONF',
 		    'comment' => 'comment000', },
 		],
@@ -526,6 +554,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_tape',
 		    'storage' => 'my_tape',
 		    'config' => 'TESTCONF2',
+		    'retention_type' => 'other config',
 		    'comment' => undef, },
 		  { 'position' => 2,
 		    'datestamp' => 20140527000200,
@@ -537,6 +566,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_tape',
 		    'storage' => 'my_tape',
 		    'config' => 'TESTCONF2',
+		    'retention_type' => 'other config',
 		    'comment' => undef, },
 		  { 'position' => 5,
 		    'datestamp' => 20140527000101,
@@ -548,6 +578,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => undef, },
 		  { 'position' => 6,
 		    'datestamp' => 20140527000100,
@@ -559,6 +590,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => undef, },
 		  { 'position' => 10,
 		    'datestamp' => 20140527000002,
@@ -570,6 +602,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment002', },
 		  { 'position' => 11,
 		    'datestamp' => 20140527000001,
@@ -581,6 +614,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment001', },
 		  { 'position' => 12,
 		    'datestamp' => 20140527000000,
@@ -592,6 +626,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment000', },
 		],
 		'severity' => $Amanda::Message::SUCCESS,
@@ -623,6 +658,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => undef, },
 		  { 'position' => 4,
 		    'datestamp' => 20140527000102,
@@ -634,6 +670,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => undef, },
 		  { 'position' => 7,
 		    'datestamp' => 20140527000005,
@@ -645,6 +682,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment005', },
 		  { 'position' => 8,
 		    'datestamp' => 20140527000004,
@@ -656,6 +694,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment004', },
 		  { 'position' => 9,
 		    'datestamp' => 20140527000003,
@@ -667,6 +706,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => 'comment003', },
 		],
 		'severity' => $Amanda::Message::SUCCESS,
@@ -698,6 +738,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment002', },
 		  { 'position' => 11,
 		    'datestamp' => 20140527000001,
@@ -709,6 +750,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment001', },
 		  { 'position' => 12,
 		    'datestamp' => 20140527000000,
@@ -720,6 +762,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment000', },
 		],
 		'severity' => $Amanda::Message::SUCCESS,
@@ -751,6 +794,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment001', },
 		  { 'position' => 12,
 		    'datestamp' => 20140527000000,
@@ -762,6 +806,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_vtapes',
 		    'storage' => 'my_vtapes',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => 'comment000', },
 		],
 		'severity' => $Amanda::Message::SUCCESS,
@@ -793,6 +838,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => undef, },
 		  { 'position' => 4,
 		    'datestamp' => 20140527000102,
@@ -804,6 +850,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'no-reuse',
 		    'comment' => undef, },
 		  { 'position' => 5,
 		    'datestamp' => 20140527000101,
@@ -815,6 +862,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => undef, },
 		  { 'position' => 6,
 		    'datestamp' => 20140527000100,
@@ -826,6 +874,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		    'pool' => 'my_robot',
 		    'storage' => 'my_robot',
 		    'config' => 'TESTCONF',
+		    'retention_type' => 'NO',
 		    'comment' => undef, },
 		],
 		'severity' => $Amanda::Message::SUCCESS,
