@@ -215,6 +215,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '1'
 				 },
 				 {'label' => undef,
@@ -222,6 +223,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '2'
 				 },
 				 {'label' => undef,
@@ -229,6 +231,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '3'
 				 },
 				 {'label' => undef,
@@ -236,6 +239,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '4'
 				 },
 				 {'label' => undef,
@@ -243,6 +247,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '5'
 				 },
 			       ],
@@ -278,6 +283,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '1',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '1'
 				 },
 				 {'label' => undef,
@@ -285,6 +291,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '2'
 				 },
 				 {'label' => undef,
@@ -292,6 +299,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '3'
 				 },
 				 {'label' => undef,
@@ -299,6 +307,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '4'
 				 },
 				 {'label' => undef,
@@ -306,6 +315,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 				  'reserved' => 0,
 				  'f_type' => '-2',
 				  'state' => 1,
+				  'retention_type' => 'NO',
 				  'slot' => '5'
 				 },
 			       ],
